Bug 510567 - Pasting into smb share fails (access denied could not write to smb)
Summary: Pasting into smb share fails (access denied could not write to smb)
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.19.0
Platform: Fedora RPMs Linux
: VHI grave
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: regression
: 510556 510630 510635 510645 510690 511203 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-13 15:39 UTC by Soup
Modified: 2025-10-31 00:10 UTC (History)
26 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.19.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Soup 2025-10-13 15:39:40 UTC
Ever since upgrading to the newest version of kio (kio-6.19.0-1) / kio-extras (kio-extras-25.08.2-1) pasting a file onto an SMB Share in dolphin doesn't work anymore


STEPS TO REPRODUCE
1. Copy a file
2. Open the SMB Share in dolphin
3. Paste

OBSERVED RESULT
When pasting a file dolphin says "access denied could not write to smb"

EXPECTED RESULT
File gets pasted without errors

Linux/KDE Plasma: EndeavourOS
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0

ADDITIONAL INFORMATION
Works again after downgrading kio to kio-6.18.0-1 and/or kio-extras to kio-extras-25.08.1-2
The share is hosted on a raspberrypi 5 and can be accessed when downgrading
Comment 1 Harald Sitter 2025-10-13 15:43:42 UTC
There were no smb changes in that version of kio-extras
Comment 2 Mara Johnson 2025-10-13 23:33:04 UTC
Experience the same issue. I could create a folder or text file, but move/copy/paste resulted in access denied errors.
Comment 3 Fabiano 2025-10-14 06:38:17 UTC
I can confirm this issue on Arch Linux with KDE Frameworks 6.19.

In my case, the problem also occurs when using kioclient directly, not only in Dolphin.
Example command and output:

$ kioclient copy -v smb://<user>@<nas>/shared-folder/test.txt smb://<user>@<nas>/shared-folder/test
kioclient 6.4.5
QThreadStorage: entry 8 destroyed before end of thread 0x55e1f558dc90
QThreadStorage: entry 1 destroyed before end of thread 0x55e1f558dc90
QThreadStorage: entry 0 destroyed before end of thread 0x55e1f558dc90

No file is copied, and Dolphin shows “Access denied” when pasting to the same share.
Restoring the system to Frameworks 6.18 immediately fixes the problem.
Comment 4 Niki 2025-10-14 07:29:31 UTC
Can confirm this issue affects file moves copying and pasting files, but still lets you create text files and folders
Comment 5 Akseli Lahtinen 2025-10-14 08:26:55 UTC
Can confirm the issue

Operating System: Fedora Linux 42
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.16.11-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 6 Julian Pollak 2025-10-14 09:00:36 UTC
I can confirm. Create/delete still works.

Additional note:
Using kio-fuse and navigating the share using a terminal still allows all permitted actions as expected.

Associated forum post: https://discuss.kde.org/t/kde-frameworks-6-19-with-smb-mounted-dolphin-cannot-copy-or-rename-files/40566
Comment 7 Akseli Lahtinen 2025-10-14 09:05:08 UTC
Did git bisect, looks like it was broken in https://invent.kde.org/frameworks/kio/-/commit/15fff1b8592648f11f20a303c8f82d61d3f19584
Comment 8 Nicolas Fella 2025-10-14 09:12:29 UTC
likely a similar issue to https://bugs.kde.org/show_bug.cgi?id=510456
Comment 9 Bug Janitor Service 2025-10-14 09:44:18 UTC Comment hidden (spam)
Comment 10 Bug Janitor Service 2025-10-14 10:14:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2022
Comment 11 Julian Pollak 2025-10-14 10:57:46 UTC
Can confirm MR 2022 fixes this.
Comment 12 jonagutkin 2025-10-14 12:14:22 UTC
same here on CachyOS 

here my OS spec : 

OS: CachyOS x86_64 
Kernel: 6.17.1-2-cachyos 
WM: kwin_wayland_wr 
Terminal: konsole 

with Synology for me, 
the folder are connected with "smb:[...]/[...]
Comment 13 Nate Graham 2025-10-14 15:45:13 UTC
*** Bug 510556 has been marked as a duplicate of this bug. ***
Comment 14 Quant 2025-10-14 19:54:04 UTC
Exactly same bug here.
Comment 15 Clint Eschberger 2025-10-15 04:31:06 UTC
Can also confirm.
Solus with Kernel 6.16.12
Plasma 6.4.5, Frameworks 6.19.0

Connecting to existing share that has been used for a long period on multiple machines. Attempted to recreate the connection and can not create new file or paste new file via Dolphin.

I can open the terminal and create new file in the share.
I can open a document on the share and edit contents and save successfully.
But I cannot create or paste a file on the same share.

I have also tested on a separate system with EndeavourOS that also has the new Framworks version, and the same issue exists.
Comment 16 edvans 2025-10-15 06:04:21 UTC
Can confirm on Fedora 42. 
Last update did the same as reported.
Comment 17 Antonio Rojas 2025-10-15 10:04:26 UTC
*** Bug 510630 has been marked as a duplicate of this bug. ***
Comment 18 Antonio Rojas 2025-10-15 10:04:44 UTC
*** Bug 510635 has been marked as a duplicate of this bug. ***
Comment 19 Akseli Lahtinen 2025-10-15 11:08:14 UTC
Git commit bcc840654fa2af68a4942fba6f58b2955e80e7ec by Akseli Lahtinen.
Committed on 15/10/2025 at 09:34.
Pushed by akselmo into branch 'master'.

CopyJob: Skip permission check if there is no UDS_ACCESS entry

Lack of UDS_ACCESS or S_IWUSR flag in it does *not* mean
that the item is definitely unwritable.

The access can be indefinite until the item is
actually worked with.

KIO should not assume that items are unwritable,
even if we lack the flag. We should just try working
with the file and handle the results, not try
pre-emptively decide the actions.

M  +12   -9    src/core/copyjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/bcc840654fa2af68a4942fba6f58b2955e80e7ec
Comment 20 Patrick Silva 2025-10-15 16:42:57 UTC
*** Bug 510645 has been marked as a duplicate of this bug. ***
Comment 21 Bug Janitor Service 2025-10-16 12:52:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/2024
Comment 22 jonagutkin 2025-10-16 17:30:28 UTC
16/10/2025
19H30 (BE/Europe)

it's work !! :D 
Thx !
Comment 23 Nicolas Fella 2025-10-16 19:45:27 UTC
Git commit 1a4d206885fa398f5ee5d4cf69515fe826d024be by Nicolas Fella, on behalf of Akseli Lahtinen.
Committed on 16/10/2025 at 19:38.
Pushed by nicolasfella into branch 'Frameworks/6.19'.

CopyJob: Skip permission check if there is no UDS_ACCESS entry

Lack of UDS_ACCESS or S_IWUSR flag in it does *not* mean
that the item is definitely unwritable.

The access can be indefinite until the item is
actually worked with.

KIO should not assume that items are unwritable,
even if we lack the flag. We should just try working
with the file and handle the results, not try
pre-emptively decide the actions.
(cherry picked from commit bcc840654fa2af68a4942fba6f58b2955e80e7ec)

M  +12   -9    src/core/copyjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/1a4d206885fa398f5ee5d4cf69515fe826d024be
Comment 24 Antonio Rojas 2025-10-16 20:18:12 UTC
*** Bug 510690 has been marked as a duplicate of this bug. ***
Comment 25 Méven 2025-10-22 07:58:47 UTC
Git commit 5749cd0812038a489682260c19b62ce340b61393 by Méven Car, on behalf of Akseli Lahtinen.
Committed on 22/10/2025 at 07:58.
Pushed by meven into branch 'master'.

JobTest: add renameFileWithNoUDSACCESS test

This test ensures the CopyJob continues working even if there
is no UDS_ACCESS entry in the item during statting.

M  +73   -0    autotests/jobtest.cpp
M  +2    -0    autotests/jobtest.h

https://invent.kde.org/frameworks/kio/-/commit/5749cd0812038a489682260c19b62ce340b61393
Comment 26 Antonio Rojas 2025-10-27 11:39:18 UTC
*** Bug 511203 has been marked as a duplicate of this bug. ***