SMBWorker: Add permissions on stat

Due to change in
https://invent.kde.org/frameworks/kio/-/commit/15fff1b8592648f11f20a303c8f82d61d3f19584
we need to give the entry permissions for copyjob
to work.

BUG: 510567